[tool.poetry]
name = "test-ob1"
version = "0.1.0"
description = ""
authors = ["Денис Кустов pro-progerkustov@yandex.ru"]
readme = "README.md"
packages = [{include = "test_job"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
apscheduler = "^3.10.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
